--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </div>           
             </div>
             <div class="col-lg-6 d-flex justify-content-center">
-              <img src="assests\Priya copy.png" alt="My image" class="img-fluid w-80">
+              <img src="Priya copy.png" alt="My image" class="img-fluid w-80">
             </div>
         </div>
     </div>
