--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </div>           
             </div>
             <div class="col-lg-6 d-flex justify-content-center">
-              <img src="Priya copy.png" alt="My image" class="img-fluid w-80">
+              <img src="https://github.com/Srinath-Gosakan/Priya-Portfolio/blob/efe519c9c22de706dd349fdabbd8eaf2ceb7514b/Priya%20copy.png" alt="My image" class="img-fluid w-80">
             </div>
         </div>
     </div>
