--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
         <div class="row">
             <div class="col-lg-6">
               <h2 class="text-violet">Connect With Me</h2>
-              <a href="https://www.instagram.com/priya_s1976/" target="_blank" class="px-2"><img src=".\assests\insta-vector.svg" alt="Insta" height="50"></a>
-              <a href="https://www.facebook.com/priya.sundarrajan1" target="_blank" class="px-2"><img src="https://github.com/Srinath-Gosakan/Priya-Portfolio/blob/fb29650ae0714604dab185167e5fcdc3015760c5/fb-vector.jpeg" alt="FB" height="37"></a>
-              <a href="mailto:sundarrajanpriya23@gmail.com" target="_blank" class="px-2"><img src=".\assests\mail-vector.png" alt="Mail" height="50"></a>
+              <a href="https://www.instagram.com/priya_s1976/" target="_blank" class="px-2"><img src="https://github.com/Srinath-Gosakan/Priya-Portfolio/blob/7ec238b6f53d5281653752afacd059e13cbf6b2f/insta-vector.svg" alt="Insta" height="50"></a>
+              <a href="https://www.facebook.com/priya.sundarrajan1" target="_blank" class="px-2"><img src="https://github.com/Srinath-Gosakan/Priya-Portfolio/blob/7ec238b6f53d5281653752afacd059e13cbf6b2f/fb-vector.png" alt="FB" height="37"></a>
+              <a href="mailto:sundarrajanpriya23@gmail.com" target="_blank" class="px-2"><img src="https://github.com/Srinath-Gosakan/Priya-Portfolio/blob/7ec238b6f53d5281653752afacd059e13cbf6b2f/mail-vector.png" alt="Mail" height="50"></a>
             </div>
             <div class="col-lg-6 d-flex justify-content-end">
                 <h2 class="text-violet">Designed By<br> Srinath Gosakan</h2>
